@@ -28,8 +28,7 @@
 		<commons-chain.version>1.2</commons-chain.version>
 		<commons-digester.version>3.2</commons-digester.version>
 		<apache-httpclient.version>4.5.14</apache-httpclient.version>
-<!--		<apache-httpclient5.version>5.2.1</apache-httpclient5.version>-->
-		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<apache-httpclient5.version>5.2.1</apache-httpclient5.version>
 	</properties>
 
 	<!--Maven依赖 需要更换可以到http://mvnrepository.com进行查询 -->
@@ -199,7 +198,7 @@
 		<dependency>
 			<groupId>xml-apis</groupId>
 			<artifactId>xml-apis</artifactId>
-			<version>1.4.01</version>
+			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-net</groupId>
@@ -381,13 +380,6 @@
 		</dependency>
 
 
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
-<!--		<dependency>-->
-<!--			<groupId>org.apache.httpcomponents.client5</groupId>-->
-<!--			<artifactId>httpclient5</artifactId>-->
-<!--			<version>${apache-httpclient5.version}</version>-->
-<!--		</dependency>-->
-
 		<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-jaxb-provider -->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
@@ -404,26 +396,24 @@
 
 		<!-- https://mvnrepository.com/artifact/org.jboss.resteasy/resteasy-multipart-provider -->
 		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-multipart-provider</artifactId>
-			<version>6.2.5.Final</version>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>${apache-httpclient5.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
-			<version>${mapstruct.version}</version>
+			<version>1.5.5.Final</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct-processor</artifactId>
-			<version>${mapstruct.version}</version>
+			<version>1.5.5.Final</version>
 		</dependency>
-
-
 
 
 	</dependencies>
@@ -431,6 +421,16 @@
 	<!--项目编译及其构建 -->
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.2</version>
+				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
